# QConfigurableDashboard

./: CMakeLists.txt  QcdExample.cpp  README.md  TODO.md  main.cpp
docs/: Doxyfile
docs/html/: AppManager_8h_source.html  ButtonWidget_8h_source.html  CallbackDispatcherInterface_8h_source.html  CallbackDispatcher_8h_source.html  ConfigLoader_8h_source.html  Container_8h_source.html  CoreObject_8h_source.html  FlagVariable_8h_source.html  GraphWidget_8h_source.html  GridContainer_8h_source.html  HBoxContainer_8h_source.html  LineDisplayWidget_8h_source.html  MainPageExample_8h_source.html  ModuleExample_8h_source.html  Module_8h_source.html  PanelContainer_8h_source.html  QCD_8h.html  QCD_8h__dep__incl.dot  QCD_8h__dep__incl.map  QCD_8h__dep__incl.md5  QCD_8h__incl.dot  QCD_8h__incl.map  QCD_8h__incl.md5  QCD_8h_source.html  QConfigurableDashboard_8h_source.html  RandomDataModule_8h_source.html  Related.html  RelatedPages_8h_source.html  TRandomDataModule_8h_source.html  TWebCamModule_8h_source.html  TabContainer_8h_source.html  TabModule_8h_source.html  Test-example.html  Test2-example.html  Test2adsf-example.html  Test_8h_source.html  TextListWidget_8h_source.html  ThreadedModule_8h_source.html  TimerModule_8h_source.html  UtilFunctions_8h_source.html  (+378 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enumvalues_0.js  (+35 more)
docs/latex/: ButtonWidget_8h_source.tex  CallbackDispatcherInterface_8h_source.tex  CallbackDispatcher_8h_source.tex  ConfigLoader_8h_source.tex  Container_8h_source.tex  CoreObject_8h_source.tex  FlagVariable_8h_source.tex  GraphWidget_8h_source.tex  GridContainer_8h_source.tex  HBoxContainer_8h_source.tex  LineDisplayWidget_8h_source.tex  MainPageExample_8h_source.tex  Module_8h_source.tex  PanelContainer_8h_source.tex  QCD_8h.tex  QCD_8h.tex.tmp  QCD_8h_source.tex  QConfigurableDashboard_8h_source.tex  RandomDataModule_8h_source.tex  TRandomDataModule_8h_source.tex  TWebCamModule_8h_source.tex  TabContainer_8h_source.tex  TabModule_8h_source.tex  TextListWidget_8h_source.tex  ThreadedModule_8h_source.tex  TimerModule_8h_source.tex  UtilFunctions_8h_source.tex  VBoxContainer_8h_source.tex  VideoDisplayWidget_8h_source.tex  VideoRecorderWidget_8h_source.tex  VideoRecorder_8h_source.tex  WebCamModule_8h_source.tex  Widget_8h_source.tex  annotated.tex  classFlagVariable.tex  classQCD_1_1AppManager.tex  classQCD_1_1AppManager__inherit__graph.md5  classQCD_1_1ButtonWidget.tex  classQCD_1_1ButtonWidget__coll__graph.dot  classQCD_1_1ButtonWidget__coll__graph.md5  (+101 more)
examples/: Playground.cpp  QcdExample.cpp  TabModuleExample.cpp
include/: AppManager.h  ButtonWidget.h  CallbackDispatcher.h  CallbackDispatcherInterface.h  Container.h  CoreObject.h  GraphWidget.h  GridContainer.h  HBoxContainer.h  LineDisplayWidget.h  MainPageExample.h  Module.h  Object.h  PanelContainer.h  QCD.h  QConfigurableDashboard.h  RandomDataModule.h  TRandomDataModule.h  TWebCamModule.h  TabContainer.h  TabModule.h  TextListWidget.h  ThreadedModule.h  TimerModule.h  UtilFunctions.h  VBoxContainer.h  VideoDisplayWidget.h  VideoRecorder.h  VideoRecorderWidget.h  WebCamModule.h  Widget.h
latex/: md_README.tex  md_TODO.tex  refman.tex
lib/NlohmannJson/: json.hpp
lib/QCustomPlot/: qcustomplot.cpp
lib/rapidxml/: manual.html  rapidxml.hpp
scripts/: lineCount.bash
src/: CallbackDispatcher.cpp  CallbackDispatcher.h  DataPasser.cpp  DataPasser.h  Doxyfile  GuiManager.cpp  GuiManager.h  QCD.h  QConfigurableDashboard.cpp  QConfigurableDashboard.h  QcdExample.cpp  WidgetConfig.h  XmlTcp.cpp
src/Config/: AppConfig.cpp  AppConfig.h  ConfigLoader.cpp  ConfigLoader.h
src/Core/: AppManager.cpp  AppManager.h  CallbackDispatcher.cpp  CallbackDispatcher.h  ConfigLoader.cpp  Object.cpp  QCD.h  QConfigurableDashboard.cpp  QConfigurableDashboard.h
src/Interfaces/: BaseInterface.cpp  BaseInterface.h  BaseThreadedInterface.cpp  BaseThreadedInterface.h  BaseTimerInterface.cpp  BaseTimerInterface.h
src/Interfaces/Examples/: RandomDataInterface.cpp  RandomDataInterface.h  ThreadedRandomDataInterface.cpp  ThreadedRandomDataInterface.h  ThreadedWebCamInterface.cpp  ThreadedWebCamInterface.h  WebCamStreamInterface.cpp  WebCamStreamInterface.h
src/Modules/: BaseModule.cpp  BaseModule.h  Module.cpp  Module.h  ThreadedModule.cpp  ThreadedModule.h  TimerModule.cpp
src/Modules/DataExamples/: RandomDataModule.cpp  TRandomDataModule.cpp  TRandomDataModule.h  TWebCamModule.cpp  WebCamModule.cpp
src/Modules/Examples/: RandomDataModule.cpp  RandomDataModule.h  TRandomDataModule.cpp  TWebCamModule.cpp  TWebCamModule.h  WebCamModule.cpp  WebCamModule.h
src/Modules/GuiExamples/: TabModule.cpp  TabModule.h
src/Util/: UtilFuntions.h  VideoRecorder.cpp  VideoRecorder.h
src/Widgets/: BaseWidget.cpp  BaseWidget.h  Widget.cpp  Widget.h
src/Widgets/CustomWidgets/: ButtonWidget.cpp  ButtonWidget.h  GraphWidget.cpp  GraphWidget.h  LineDisplayWidget.cpp  LineDisplayWidget.h  TextListWidget.cpp  (+5 more)
src/core/: ConfigLoader.cpp  CoreObject.cpp  QConfigurableDashboard.cpp
src/html/: QCD_8h_source.html  QConfigurableDashboard_8h_source.html  annotated.html  classQCD_1_1QConfigurableDashboard-members.html  classQCD_1_1QConfigurableDashboard.html  classQCD_1_1QConfigurableDashboard__coll__graph.md5  classes.html  files.html  hierarchy.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  menudata.js  namespaceQCD.html  namespaces.html
src/latex/: annotated.tex  classQCD_1_1QConfigurableDashboard.tex  hierarchy.tex  namespaceQCD.tex  refman.tex
src/modules/: Module.cpp  ThreadedModule.cpp  TimerModule.cpp
src/util/: FlagVariable.h  VideoRecorder.cpp
src/widgets/: Widget.cpp
(+34 files in other folders)
